sysconfig/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

# SNMP, SSH, Backup
-A INPUT -p udp --dport 161 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -p udp --dport 5555 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5555 -j ACCEPT

# HTTP
-A INPUT -p tcp -m tcp -s 192.168.13.0/24 --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.8.19 --dport 80 -j ACCEPT

# MySQL
-A INPUT -p tcp -m tcp -s 192.168.8.29 --dport 3306 -j ACCEPT

# Mail :: SMTP, Submission
-A INPUT -m state --state NEW -m tcp -p tcp --dport 25 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 465 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 587 -j ACCEPT

# Mail :: Pop3, Pop3s
-A INPUT -m state --state NEW -m tcp -p tcp --dport 110 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 995 -j ACCEPT

# Mail :: Imap, Imaps
-A INPUT -m state --state NEW -m tcp -p tcp --dport 143 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 993 -j ACCEPT


-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
